// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionFooter Prop Tests with both start and end actions should display both start and end actions 1`] = `
<ActionFooter
  end="End Action"
  start="Start Action"
>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer with-actions action-footer"
    >
      <div
        className="start-actions"
      >
        Start Action
      </div>
      <div
        className="end-actions"
      >
        End Action
      </div>
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests with only a start action should only display a start action 1`] = `
<ActionFooter
  start="Start Action"
>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer with-actions action-footer"
    >
      <div
        className="start-actions"
      >
        Start Action
      </div>
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests with only an end action should only display an end action 1`] = `
<ActionFooter
  end="End Action"
>
  <BlockActionFooter
    className="action-footer-end"
  >
    <div
      className="block-action-footer with-actions action-footer-end"
    >
      <div
        className="end-actions"
      >
        End Action
      </div>
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests without start or end actions should display no actions 1`] = `
<ActionFooter>
  <BlockActionFooter
    className="action-footer-end"
  >
    <div
      className="block-action-footer action-footer-end"
    />
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with both start and end socket buttons 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="start-actions"
  >
    <button
      type="button"
    >
      Start Button
    </button>
  </div>
  <div
    className="end-actions"
  >
    <button
      type="button"
    >
      End Button
    </button>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only an end-actions button 1`] = `
<BlockActionFooter
  className="action-footer-end"
>
  <div
    className="end-actions"
  >
    <button
      type="button"
    >
      End Button
    </button>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only one start-actions button 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="start-actions"
  >
    <button
      type="button"
    >
      Start Button
    </button>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only two end-actions buttons 1`] = `
<BlockActionFooter
  className="action-footer-end"
>
  <div
    className="end-actions"
  >
    <div>
      <button
        type="button"
      >
        End Button 1
      </button>
      <button
        type="button"
      >
        End Button 2
      </button>
    </div>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only two start-actions buttons 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="start-actions"
  >
    <div>
      <button
        type="button"
      >
        Start Button 1
      </button>
      <button
        type="button"
      >
        Start Button 2
      </button>
    </div>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render an empty footer 1`] = `
<BlockActionFooter
  className="action-footer-end"
/>
`;
